# yaptt

./: .gitignore  Cargo.toml  Justfile  LICENSE  PKGBUILD  README.md  RELEASE.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs  pw_volume.rs
daemon/tests/: config.rs  config_file.rs  devices.rs  events.rs  integration.rs  keys.rs  pid.rs  ptt_safety.rs  state.rs  uinput.rs
gui/: .gitignore  README.md  package-lock.json
gui/src/: App.vue
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
ptt/: __init__.py  __main__.py  daemon.py  indicator.py  toggle.py
systemd/: ptt.service
waybar/: ptt.css  ptt.jsonc
