[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptt"
version = "1.0.0"
description = "System-wide push-to-talk for Wayland (PipeWire/PulseAudio)"
requires-python = ">=3.10"
dependencies = [
    "evdev>=1.6.0",
]

[project.scripts]
ptt = "ptt.__main__:main"
ptt-toggle = "ptt.toggle:main"
ptt-indicator = "ptt.indicator:main"

[tool.setuptools.packages.find]
include = ["ptt*"]
