[package]
name = "yaptt-daemon"
version = "0.1.0"
edition = "2021"
description = "System-wide push-to-talk for Wayland"

[[bin]]
name = "yaptt-daemon"
path = "src/main.rs"

[[bin]]
name = "yaptt-toggle"
path = "src/bin/ptt-toggle.rs"

[[bin]]
name = "yaptt-indicator"
path = "src/bin/ptt-indicator.rs"

[dependencies]
evdev = "0.12"
input-linux = "0.7"
libspa-sys = "0.10"
pipewire = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
